# graph-hs

./: .gitignore  graph-hs.cabal  stack.yaml
src/Data/: Graph.hs
test/: Spec.hs
