name:                graph-hs
version:             0.1.0.0
synopsis:            Graph processing library
description:         Please see README.md
homepage:            https://github.com/githubuser/graph-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
copyright:           2016 Yorick Laupa
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph
  build-depends:       base >= 4.7 && < 5,
                       machines >= 0.6 && < 0.7,
                       containers

  default-language:    Haskell2010

test-suite graph-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graph-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/graph-hs
